# spotify-to-saavn

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
src/spotify_to_saavn/: config.py  logger.py  saavn.py  spotify.py  transfer.py
tests/: test_saavn.py  test_spotify.py  test_transfer.py
