[project]
name = "spotify-to-saavn"
version = "0.1.0"
description = ""
authors = [
    {name = "Neha Kantheti",email = "nehakantheti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spotipy (>=2.25.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "spotify_to_saavn", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "ruff (>=0.15.2,<0.16.0)"
]
